--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bootstrap-carousel-modal",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A bootstrap modal containing an image carousel",
   "main": "carousel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "lite-server",
     "dev": "lite-server"
   },
   "author": "Terry Morse",
