--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-carousel-modal",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A bootstrap modal containing an image carousel",
   "main": "carousel.js",
   "scripts": {
@@ -15,5 +15,6 @@
   },
   "devDependencies": {
     "lite-server": "^2.5.4"
-  }
+  },
+  "dependencies": {}
 }
