--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-carousel-modal",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "A bootstrap modal containing an image carousel",
   "main": "carousel.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "url": "https://github.com/terrymorse58/bootstrap-carousel-modal.git"
   },
   "devDependencies": {
+    "bootstrap": "^4.5.2",
     "lite-server": "^2.5.4"
   },
   "dependencies": {}
