--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image-gallery-overlay",
-  "version": "1.3.2",
-  "description": "A responsive overlay component with a hero image and scrolling list of clickable thumbnail images",
+  "version": "1.3.3",
+  "description": "A responsive overlay web component with a hero image and scrolling list of clickable thumbnail images",
 
   "main": "build/js/carousel.js",
   "scripts": {
