--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "image-gallery-overlay",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "description": "A responsive overlay web component with a hero image and scrolling list of clickable thumbnail images",
 
-  "main": "build/js/carousel.js",
+  "main": "build/js/image-gallery.js",
   "scripts": {
     "test": "jest",
     "dev": "lite-server",
-    "build": "bash build.sh"
+    "build": "bash build.sh",
+    "demo": "open demo/index.html"
   },
   "author": "Terry Morse",
   "license": "MIT",
