--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "image-gallery-overlay",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A responsive overlay web component with a hero image and scrolling list of clickable thumbnail images",
-
   "main": "build/js/image-gallery.js",
   "scripts": {
     "test": "jest",
@@ -42,6 +41,5 @@
     "lite-server": "^2.5.4",
     "popper.js": "^1.16.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
